<resources>
    <string name="app_name">MobileDevWeatherApp</string>
    <string name="messages_header" />
    <string name="signature_title" />
    <string name="reply_title" />
    <string name="sync_header" />
    <string name="sync_title" />
    <string name="attachment_title" />
    <string name="app_label" />
    <string name="search_hint" />

    <string name="title_activity_main">MainActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

<!--  Fragment Select Location page Strings  -->
    <string name="tvEnterLocation">Enter a location</string>
    <string name="tvHowManyDays">How many days in the future would you like the forecast for</string>
    <string name="etLocationName">Location name</string>
    <string name="etForecastDaysInput">1</string>
    <string name="btnGetForecast">Get forecast</string>
    <string name="tvForecastCurrentLocation">Get the forecast for your current location</string>
    <string name="btnGpsForecast">Get forecast for here</string>

<!--  fragment location confirmation page Strings  -->
    <string name="tvConfirmLocationLabel">Please confirm the location you want from the options below</string>
    <string name="btnGetForecastLocationConfirm">GET FORECAST</string>

<!--  hour forecast list item page Strings  -->
    <string name="tvForecastDate">30 Sept</string>
    <string name="tvForecastTime">10:00</string>
    <string name="tvForecastTemp">10C</string>
    <string name="tvForecastHumidity">90%</string>
    <string name="tvForecastWeather">Sunny</string>

<!--  Fragment Forecast page Strings  -->

    <string name="tvForecastLabel">Forecast For Aberdeen, UK</string>
    <string name="btnShowLocationMap">Show on map</string>
    <string name="btnCheckForecastOnline">Check forecast online</string>
    <string name="btnShareForecast">Share forecast</string>
    <string name="forecast_date_format">dd-MMM</string>

<!--  Fragment Forecast page Landscape Strings  -->
    <string name="tvForecastLabelLandscape">Forecast For Aberdeen, UK</string>
    <string name="btnShowLocationMapLandscape">Show on map</string>
    <string name="btnCheckForecastOnlineLandscape">Check forecast online</string>
    <string name="btnShareForecastLandscape">Share forecast</string>

<!--  Settings Fragment page Strings -->
    <string name="tvSettings">Settings</string>
    <string name="spSettingsUnits">Display temperature in</string>
    <string name="btnSaveSettings">Store</string>
    <string-array name="spSettingsUnitsOptions">
        <item>Celcius</item>
        <item>Farenheit</item>
        <item>Kelvin</item>
    </string-array>

<!-- Menu Items -->
    <string name="mi_appBarHome">Home</string>
    <string name="mi_appBarSettings">Settings</string>

<!--  Bottom bar menu items Strings  -->
    <string name="mi_bottomNavHome">Home</string>
    <string name="mi_bottomNavSettings">Settings</string>
    <string name="error_parsing_forecast">Error parsing the weather forecast</string>
    <string name="error_downloading_forecast">Error parsing the weather forecast</string>

</resources>