<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationSelectionFragment">

    <TextView
        android:id="@+id/tvEnterLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="43dp"
        android:text="@string/tvEnterLocation"
        app:layout_constraintBottom_toTopOf="@+id/tvHowManyDays"
        app:layout_constraintEnd_toStartOf="@+id/etLocationName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tvHowManyDays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="103dp"
        android:text="@string/tvHowManyDays"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnGetForecast"
        app:layout_constraintEnd_toStartOf="@+id/etForecastDaysInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterLocation" />

    <EditText
        android:id="@+id/etLocationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/etLocationName"
        app:layout_constraintBottom_toBottomOf="@+id/tvEnterLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvEnterLocation"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etForecastDaysInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/etForecastDaysInput"
        app:layout_constraintBottom_toBottomOf="@+id/tvHowManyDays"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvHowManyDays"
        app:layout_constraintTop_toTopOf="@+id/tvHowManyDays"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnGetForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="57dp"
        android:text="@string/btnGetForecast"
        app:layout_constraintBottom_toTopOf="@+id/tvForecastCurrentLocation"
        app:layout_constraintEnd_toEndOf="@+id/tvForecastCurrentLocation"
        app:layout_constraintStart_toStartOf="@+id/tvForecastCurrentLocation"
        app:layout_constraintTop_toBottomOf="@+id/tvHowManyDays" />

    <TextView
        android:id="@+id/tvForecastCurrentLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="92dp"
        android:text="@string/tvForecastCurrentLocation"
        app:layout_constraintBottom_toTopOf="@+id/btnGpsForecast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetForecast" />

    <Button
        android:id="@+id/btnGpsForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/btnGpsForecast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvForecastCurrentLocation"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/tvForecastCurrentLocation"
        app:layout_constraintTop_toBottomOf="@+id/tvForecastCurrentLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>